# Winter_Challenge_2024

./: .copilot-instructions.md  Cargo.toml  README.md  all_rust_code.rs  note.md  output.rs
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: integration-test.yml  security-audit.yml
benches/: my_benchmark.rs
install/: install.sh
install/windows/: main.wxs
install/windows/pkg_resources/: LICENSE.rtf
src/: main.rs
src/actions/: action.rs  action_type.rs  action_validator.rs  binary_map.rs  mod.rs
src/entites_managers/: mod.rs
src/game_entities/: cell.rs  coord.rs  grid.rs  mod.rs  organ.rs  organ_direction.rs  organ_owner.rs  organ_type.rs  player.rs  protain_summary.rs  protein.rs  protein_wallet.rs
src/strategies/: play.rs
